Возвращен вызов updateWeather и updateForecast при загрузке

--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -134,6 +134,7 @@
         setInterval(updateForecast, 900000);
 
         updateTheme();
+        updateForecast();
     </script>
 </body>
 </html>
